--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Ninja_Game - copia (2).sln"
+    "dotnet.defaultSolution": "NinjaTarget_Game.sln"
 }
